# visualbasic-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  publish.yml
data/: msvbvm60_exports.csv  opcodes.csv  vb6_constants.csv  vb6_control_guids.csv  vb6_control_properties.csv  vb6_events.csv
examples/: dump.rs
src/: addressmap.rs  entrypoint.rs  error.rs  lib.rs  trace.rs  util.rs
src/pcode/: calltarget.rs  decoder.rs  display.rs  framevar.rs  mod.rs  opcode.rs  operand.rs  semantics.rs
src/project/: methodentry.rs  methodlink.rs  mod.rs  pcodemethod.rs  vbcontrol.rs  vbobject.rs  vbproject.rs
src/vb/: bstr.rs  comreg.rs  constantpool.rs  constants.rs  control.rs  controlprop.rs  eventname.rs  events.rs  exports.rs  external.rs  flags.rs  formdata.rs  functype.rs  guitable.rs  header.rs  mod.rs  object.rs  objecttable.rs  privateobj.rs  procedure.rs  projectdata.rs  projectinfo2.rs  property.rs  publicbytes.rs  varstub.rs
